fix media again

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>RoboCup Team Meeting Minutes</title>
-  <link rel="icon" type="image/x-icon" href="Lab2_Starter/images/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 <body>
   <header>
@@ -22,7 +22,7 @@
   <main>
     <h1>RoboCup Team Meeting Minutes</h1>
     <!-- An image for illustration -->
-    <img src="Lab2_Starter/images/robocup.jpg" alt="RoboCup Image" width="250" />
+    <img src="images/robocup.jpg" alt="RoboCup Image" width="250" />
 
     <section id="members">
       <h2>Members</h2>
@@ -68,12 +68,12 @@
       <p>Qualification Video</p>
       
       <audio controls>
-        <source src="Lab2_Starter/media/game.mp3" type="audio/mpeg">
+        <source src="media/game.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
       </audio>
       <br />
       <video controls width="320">
-        <source src="Lab2_Starter/media/qualification.mp4" type="video/mp4">
+        <source src="media/qualification.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
       <br />
