--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <p>Qualification Video</p>
       
       <audio controls>
-        <source src="media/game.mp3" type="audio/mpeg">
+        <source src="media/game.mp3" type="audio/mp3">
         Your browser does not support the audio element.
       </audio>
       <br />
