--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </select>
         <br />
         <label for="browsers">Choose your favorite browser:</label>
-        <input list="browsers" id="browser-choice" name="browser-choice" placeholder="Select or type a browser">
+        <input list="browsers" id="browsers" name="browser-choice" placeholder="Select or type a browser">
         <datalist id="browsers">
           <option value="Chrome"></option>
           <option value="Firefox"></option>
