--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
         </select>
         <br />
         <label for="browsers">Choose your favorite browser:</label>
-        <input list="browsers" id="browsers" name="browser-choice" placeholder="Select or type a browser">
-        <datalist id="browsers">
+        <input id="browsers" list="browsers-list" name="browser-choice" placeholder="Select or type a browser">
+        <datalist id="browsers-list">
           <option value="Chrome"></option>
           <option value="Firefox"></option>
           <option value="Safari"></option>
